Changed to typeorm for sqlite3 DB

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "incremental": true,
     "target": "es2022",
     "module": "commonjs",
